src/tui/snapshots/codecoder__tui__render__snapshot_tests__verify_all_passed.snap
---
source: src/tui/render.rs
expression: snap
---
" CodeCoder 验证仪表盘 · 完成                                                    " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (25, " "), (27, " ")]
"  ▾  [✔] L1 主干 (hermetic)  1/1  100%                                          " Hidden by multi-width symbols: [(13, " "), (15, " ")]
"    ▾ [✔] kernel  1/1                                                           "
"      [✔] test_a  100ms                                                         "
"  ▸  [⏸] L2 pty 冒烟  0/0  0%                                                   " Hidden by multi-width symbols: [(17, " "), (19, " ")]
"  ▸  [⏸] L3 真实 LLM  0/0  0%                                                   " Hidden by multi-width symbols: [(13, " "), (15, " ")]
"  ▾  [⏸] L4 能力验证  0/0  0%  [空闲]                                           " Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (33, " "), (35, " ")]
"    ⏸ 骨架场景  (0/0)                                                           " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " ")]
"    ⏸ 自驱动探索  (已检:0 已愈:0 失败:0)                                        " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (20, " "), (22, " "), (27, " "), (29, " "), (34, " "), (36, " ")]
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" 通过:5  失败:0  跳过:0  总计:5  耗时:1.2s                                      " Hidden by multi-width symbols: [(2, " "), (4, " "), (10, " "), (12, " "), (18, " "), (20, " "), (26, " "), (28, " "), (34, " "), (36, " ")]
"› type a message, or / for commands                                             "
" Tab 展开/折叠  ↑↓ 选择  Enter 展开详情  Esc 退出  F5 重新运行  F6 仅 L4        " Hidden by multi-width symbols: [(6, " "), (8, " "), (11, " "), (13, " "), (20, " "), (22, " "), (32, " "), (34, " "), (36, " "), (38, " "), (46, " "), (48, " "), (55, " "), (57, " "), (59, " "), (61, " "), (68, " ")]
